--- a/index.html
+++ b/index.html
@@ -376,7 +376,138 @@
 
             <!--==================== QUALIFICATION ====================-->
             <section class="qualification section" id="qualification">
-                
+                <h2 class="section__title">Qualification</h2>
+                <span class="section__subtitle">Experience & Education</span>
+
+                <div class="qualification__container container grid section__border">
+                    <!--==================== QUALIFICATION 1 ====================-->
+                    <div class="qualification__content">
+                        <h3 class="qualification__title">
+                            <i class="ri-pencil-ruler-2-line"></i> Education
+                        </h3>
+
+                        <div class="qualification__info">
+                            <div>
+                                <h3 class="qualification__name">
+                                    English
+                                </h3>
+
+                                <span class="qualification__country">Institute - Argentina</span>
+                                <span class="qualification__year">2006 - 2016</span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__name">
+                                    Web Development Technician
+                                </h3>
+
+                                <span class="qualification__country">UNER University - Argentina</span>
+                                <span class="qualification__year">2022- Present</span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__name">
+                                    Computer Engineer
+                                </h3>
+
+                                <span class="qualification__country">UNL University  - Argentina</span>
+                                <span class="qualification__year">2020 - Present</span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__name">
+                                    Diploma in Website and Mobile Application Development
+                                </h3>
+
+                                <span class="qualification__country">Carlos Slim Foundation - México</span>
+                                <span class="qualification__year">2021 - 2022</span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__name">
+                                    Fontend Developer
+                                </h3>
+
+                                <span class="qualification__country">Carlos Slim Foundation - México</span>
+                                <span class="qualification__year">2021 - 2022</span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__name">
+                                    Backend Developer
+                                </h3>
+
+                                <span class="qualification__country">Carlos Slim Foundation - México</span>
+                                <span class="qualification__year">2021 - 2022</span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__name">
+                                    Video Games Developer
+                                </h3>
+
+                                <span class="qualification__country">Carlos Slim Foundation - México</span>
+                                <span class="qualification__year">2021 - 2022</span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__name">
+                                    Database Administrator
+                                </h3>
+
+                                <span class="qualification__country">Carlos Slim Foundation - México</span>
+                                <span class="qualification__year">2021 - 2022</span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__name">
+                                    UX/UI Design
+                                </h3>
+
+                                <span class="qualification__country">Carlos Slim Foundation - México</span>
+                                <span class="qualification__year">2022 - Present</span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__name">
+                                   Graphic Designer
+                                </h3>
+
+                                <span class="qualification__country">Figma</span>
+                                <span class="qualification__year">2022 - Present</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--==================== QUALIFICATION 2 ====================-->
+                    <div class="qualification__content">
+                        <h3 class="qualification__title">
+                            <i class="ri-building-line"></i> Work
+                        </h3>
+
+                        <div class="qualification__info">
+                            <div>
+                                <h3 class="qualification__name">
+                                    Frontend Developer
+                                </h3>
+
+                                <span class="qualification__country">Freelancer</span>
+                                <span class="qualification__year">2021 - Present</span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__name">
+                                    Graphic Designer
+                                </h3>
+
+                                <span class="qualification__country">Freelancer</span>
+                                <span class="qualification__year">2020 - Present</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <img src="./assets/img/shape-circle.svg" alt="qualification image" class="qualification__img">
             </section>
 
             <!--==================== SERVICES ====================-->
