--- a/index.html
+++ b/index.html
@@ -488,6 +488,15 @@
                         <div class="qualification__info">
                             <div>
                                 <h3 class="qualification__name">
+                                    Data Collection for Security Systems and Artificial Intelligence
+                                </h3>
+
+                                <span class="qualification__country">Remotasks - USA</span>
+                                <span class="qualification__year">2021 - Present</span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__name">
                                     Frontend Developer
                                 </h3>
 
@@ -501,7 +510,7 @@
                                 </h3>
 
                                 <span class="qualification__country">Freelancer</span>
-                                <span class="qualification__year">2020 - Present</span>
+                                <span class="qualification__year">2021 - Present</span>
                             </div>
                         </div>
                     </div>
@@ -512,7 +521,61 @@
 
             <!--==================== SERVICES ====================-->
             <section class="services section" id="services">
-                
+                <h2 class="section__title">Services</h2>
+                <span class="section__subtitle">What I Offer</span>
+
+                <div class="services__container container grid section__border">
+                    <div class="services__card">
+                        <i class="ri-layout-4-line"></i>
+
+                        <h2 class="services__title">
+                            UI/UX <br>
+                            Designer
+                        </h2>
+
+                        <p class="services__description">
+                            Service that provides the best quality and at 
+                            the request of the client, with professional 
+                            work and customer support.
+                        </p>
+
+                        <div class="services__border"></div>
+                    </div>
+
+                    <div class="services__card">
+                        <i class="ri-layout-4-line"></i>
+
+                        <h2 class="services__title">
+                            UI/UX <br>
+                            Designer
+                        </h2>
+
+                        <p class="services__description">
+                            Service that provides the best quality and at 
+                            the request of the client, with professional 
+                            work and customer support.
+                        </p>
+
+                        <div class="services__border"></div>
+                    </div>
+
+                    <div class="services__card">
+                        <i class="ri-layout-4-line"></i>
+
+                        <h2 class="services__title">
+                            Website <br>
+                            Design
+                        </h2>
+
+                        <p class="services__description">
+                            Service that provides the best quality and at 
+                            the request of the client, with professional 
+                            work and customer support.
+                        </p>
+
+                        <div class="services__border"></div>
+                    </div>
+                </div>
             </section>
 
             <!--==================== PROJECTS ====================-->
