--- a/index.html
+++ b/index.html
@@ -543,27 +543,10 @@
                     </div>
 
                     <div class="services__card">
-                        <i class="ri-layout-4-line"></i>
+                        <i class="ri-code-line"></i>
 
                         <h2 class="services__title">
-                            UI/UX <br>
-                            Designer
-                        </h2>
-
-                        <p class="services__description">
-                            Service that provides the best quality and at 
-                            the request of the client, with professional 
-                            work and customer support.
-                        </p>
-
-                        <div class="services__border"></div>
-                    </div>
-
-                    <div class="services__card">
-                        <i class="ri-layout-4-line"></i>
-
-                        <h2 class="services__title">
-                            Website <br>
+                           Website <br>
                             Design
                         </h2>
 
@@ -575,6 +558,7 @@
 
                         <div class="services__border"></div>
                     </div>
+
                 </div>
             </section>
 
