Project Section First Commit

--- a/index.html
+++ b/index.html
@@ -564,7 +564,70 @@
 
             <!--==================== PROJECTS ====================-->
             <section class="projects section" id="projects">
-                
+                <h2 class="section__title">Projects</h2>
+                <span class="section__subtitle">Most recent work</span>
+
+                <div class="container section__border">
+                    <div class="projects__container">
+                        <div>
+                            <!--==================== PROJECT 1 ====================-->
+                            <div class="projects__content">
+                                <img src="./assets/img/preview-1.png" alt="Project image 1" class="projects__img">
+
+                                <div>
+                                    <span class="projects__subtitle">Web</span>
+                                    <h1 class="projects__title">Modern Gym Website</h1>
+
+                                    <a href="https://Berotot-Gym.micaelakloster.repl.co" target="_blank" class="projects__button">
+                                        View demo <i class="ri-arrow-right-line"></i>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <!--==================== PROJECT 2 ====================-->
+                            <div class="projects__content">
+                                <img src="./assets/img/preview-2.png" alt="Project image 1" class="projects__img">
+
+                                <div>
+                                    <span class="projects__subtitle">Web</span>
+                                    <h1 class="projects__title">Watches ECommerce Store</h1>
+
+                                    <a href="https://Watches.micaelakloster.repl.co" target="_blank" class="projects__button">
+                                        View demo <i class="ri-arrow-right-line"></i>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <!--==================== PROJECT 3 ====================-->
+                            <div class="projects__content">
+                                <img src="./assets/img/project4.jpg" alt="Project image 1" class="projects__img">
+
+                                <div>
+                                    <span class="projects__subtitle">Design</span>
+                                    <h1 class="projects__title">Application Design</h1>
+
+                                    <a href="https://www.canva.com/design/DAFRW-R-Zuo/3L-_MgHdKd141JJFHdolpw/watch?utm_content=DAFRW-R-Zuo&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank" class="projects__button">
+                                        View demo <i class="ri-arrow-right-line"></i>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <!--==================== PROJECT 4 ====================-->
+                            <div class="projects__content">
+                                <img src="./assets/img/project1.jpg" alt="Project image 1" class="projects__img">
+
+                                <div>
+                                    <span class="projects__subtitle"></span>
+                                    <h1 class="projects__title"></h1>
+
+                                    <a href="#" class="projects__button">
+                                        View demo <i class="ri-arrow-right-line"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!--==================== TESTIMONIAL ====================-->
