--- a/index.html
+++ b/index.html
@@ -568,10 +568,10 @@
                 <span class="section__subtitle">Most recent work</span>
 
                 <div class="container section__border">
-                    <div class="projects__container">
-                        <div>
+                    <div class="projects__container swiper">
+                        <div class="swiper-wrapper">
                             <!--==================== PROJECT 1 ====================-->
-                            <div class="projects__content">
+                            <div class="projects__content swiper-slide">
                                 <img src="./assets/img/preview-1.png" alt="Project image 1" class="projects__img">
 
                                 <div>
@@ -585,7 +585,7 @@
                             </div>
 
                             <!--==================== PROJECT 2 ====================-->
-                            <div class="projects__content">
+                            <div class="projects__content swiper-slide">
                                 <img src="./assets/img/preview-2.png" alt="Project image 2" class="projects__img">
 
                                 <div>
@@ -599,7 +599,7 @@
                             </div>
 
                             <!--==================== PROJECT 3 ====================-->
-                            <div class="projects__content">
+                            <div class="projects__content swiper-slide">
                                 <img src="./assets/img/preview-3.png" alt="Project image 3" class="projects__img">
 
                                 <div>
@@ -612,8 +612,8 @@
                                 </div>
                             </div>
                             <!--==================== PROJECT 4 ====================-->
-                            <div class="projects__content">
-                                <img src="./assets/img/Prewiev-4.png" alt="Project image 4" class="projects__img">
+                            <div class="projects__content swiper-slide">
+                                <img src="./assets/img/prewiev-4.png" alt="Project image 4" class="projects__img">
 
                                 <div>
                                     <span class="projects__subtitle">Design</span>
@@ -626,14 +626,22 @@
                             </div>
 
                         </div>
+
+                        <!-- Swiper arrows -->
+                        <div class="swiper-button-next">
+                            <i class="ri-arrow-right-s-line"></i>
+                        </div>
+
+                        <div class="swiper-button-prev">
+                            <i class="ri-arrow-left-s-line"></i>
+                        </div>
+
+                        <!-- Swiper pagination -->
+                        <div class="swiper-pagination"></div>
                     </div>
                 </div>
             </section>
 
-            <!--==================== TESTIMONIAL ====================-->
-            <section class="testimonial section">
-                
-            </section>
 
             <!--==================== CONTACT ====================-->
             <section class="contact section" id="contact">
