--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
                         <li class="nav__item">
-                            <a href="#home" class="nav__link">
+                            <a href="#home" class="nav__link active-link">
                                 <i class="ri-home-5-line"></i> Home
                             </a>
                         </li>
@@ -749,7 +749,9 @@
 
 
         <!--========== SCROLL UP ==========-->
-        
+        <a href="#" class="scrollup" id="scroll-up">
+            <i class="ri-arrow-up-line"></i>
+        </a>        
 
         <!--=============== SCROLLREVEAL ===============-->
         <script src=""></script>
