--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <div class="nav__buttons">
                     <!-- Theme change button -->
-                    <!-- <i class="ri-moon-line change-theme" id="theme-button"></i> -->
+                    <i class="ri-moon-line change-theme" id="theme-button"></i>
 
                     <!-- Toggle Button -->
                     <div class="nav__toggle" id="nav-toggle">
