New Project added

--- a/index.html
+++ b/index.html
@@ -362,11 +362,11 @@
 
                         <div class="skills__data">
                             <div class="skills__blob">
-                                <img src="./assets/img/canva-1.svg" alt="skills image">
+                                <img src="./assets/img/webflow-icon.svg" alt="skills image">
                             </div>
 
-                            <h3 class="skills__name">Canva</h3>
-                            <span class="skills__subtitle">Advance</span>
+                            <h3 class="skills__name">Webflow</h3>
+                            <span class="skills__subtitle">Intermediate<span>
                         </div>
                     </div>
                 </div>
@@ -425,7 +425,7 @@
 
                             <div>
                                 <h3 class="qualification__name">
-                                    Fontend Developer
+                                    Frontend Developer
                                 </h3>
 
                                 <span class="qualification__country">Carlos Slim Foundation - México</span>
@@ -572,6 +572,19 @@
                         <div class="swiper-wrapper">
                             <!--==================== PROJECT 1 ====================-->
                             <div class="projects__content swiper-slide">
+                                <img src="./assets/img/preview-5.png" alt="Project image 5" class="projects__img">
+
+                                <div>
+                                    <span class="projects__subtitle">Web Design</span>
+                                    <h1 class="projects__title">Chevrolet Camaro Website</h1>
+
+                                    <a href="https://www.figma.com/file/5tNbM1POC7gV89Ygstyr2V/Camaro-V8---Website?node-id=0%3A1&t=EOwaIP8E0kD27eFe-1" target="_blank" class="projects__button">
+                                        View demo in Figma <i class="ri-arrow-right-line"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <!--==================== PROJECT 2 ====================-->
+                            <div class="projects__content swiper-slide">
                                 <img src="./assets/img/preview-1.png" alt="Project image 1" class="projects__img">
 
                                 <div>
@@ -584,7 +597,7 @@
                                 </div>
                             </div>
 
-                            <!--==================== PROJECT 2 ====================-->
+                            <!--==================== PROJECT 3 ====================-->
                             <div class="projects__content swiper-slide">
                                 <img src="./assets/img/preview-2.png" alt="Project image 2" class="projects__img">
 
@@ -598,7 +611,7 @@
                                 </div>
                             </div>
 
-                            <!--==================== PROJECT 3 ====================-->
+                            <!--==================== PROJECT 4 ====================-->
                             <div class="projects__content swiper-slide">
                                 <img src="./assets/img/preview-3.png" alt="Project image 3" class="projects__img">
 
@@ -611,7 +624,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <!--==================== PROJECT 4 ====================-->
+                            <!--==================== PROJECT 5 ====================-->
                             <div class="projects__content swiper-slide">
                                 <img src="./assets/img/prewiev-4.png" alt="Project image 4" class="projects__img">
 
