--- a/index.html
+++ b/index.html
@@ -250,6 +250,54 @@
                             <span class="skills__subtitle">Intermediate</span>
                         </div>
 
+                    </div>
+                </div>
+
+                
+
+                <!--==================== SKILLS 2 ====================-->
+                <div class="skills__content">
+                    <h3 class="skills__title">
+                        <i class="ri-pantone-line"></i> Web Designer
+                    </h3>
+
+                    <div class="skills__info">
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="./assets/img/figma-1.svg" alt="skills image">
+                            </div>
+
+                            <h3 class="skills__name">Figma</h3>
+                            <span class="skills__subtitle">Intermediate</span>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="./assets/img/invision.svg" alt="skills image">
+                            </div>
+
+                            <h3 class="skills__name">InVision</h3>
+                            <span class="skills__subtitle">Intermediate</span>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="./assets/img/webflow-icon.svg" alt="skills image">
+                            </div>
+
+                            <h3 class="skills__name">Webflow</h3>
+                            <span class="skills__subtitle">Intermediate<span>
+                        </div>
+                    </div>
+                </div>
+
+                <!--==================== SKILLS 3 ====================-->
+                <div class="skills__content">
+                    <h3 class="skills__title">
+                        <i class="ri-code-s-slash-line"></i> Other Programming Languages
+                    </h3>
+
+                    <div class="skills__info">
                        
                         <div class="skills__data">
                             <div class="skills__blob">
@@ -332,42 +380,6 @@
                             <span class="skills__subtitle">Basic</span>
                         </div>
 
-                    </div>
-                </div>
-
-                <!--==================== SKILLS 2 ====================-->
-                <div class="skills__content">
-                    <h3 class="skills__title">
-                        <i class="ri-pantone-line"></i> Web Designer
-                    </h3>
-
-                    <div class="skills__info">
-                        <div class="skills__data">
-                            <div class="skills__blob">
-                                <img src="./assets/img/figma-1.svg" alt="skills image">
-                            </div>
-
-                            <h3 class="skills__name">Figma</h3>
-                            <span class="skills__subtitle">Intermediate</span>
-                        </div>
-
-                        <div class="skills__data">
-                            <div class="skills__blob">
-                                <img src="./assets/img/invision.svg" alt="skills image">
-                            </div>
-
-                            <h3 class="skills__name">InVision</h3>
-                            <span class="skills__subtitle">Intermediate</span>
-                        </div>
-
-                        <div class="skills__data">
-                            <div class="skills__blob">
-                                <img src="./assets/img/webflow-icon.svg" alt="skills image">
-                            </div>
-
-                            <h3 class="skills__name">Webflow</h3>
-                            <span class="skills__subtitle">Intermediate<span>
-                        </div>
                     </div>
                 </div>
 
@@ -570,9 +582,22 @@
                 <div class="container section__border">
                     <div class="projects__container swiper">
                         <div class="swiper-wrapper">
-                            <!--==================== PROJECT 1 ====================-->
+                            <!--==================== PROJECT 6 ====================-->
                             <div class="projects__content swiper-slide">
-                                <img src="./assets/img/preview-5.png" alt="Project image 5" class="projects__img">
+                                <img src="./assets/img/Projects Preview Image/preview-6.png" alt="Project image 6" class="projects__img">
+
+                                <div>
+                                    <span class="projects__subtitle">Web</span>
+                                    <h1 class="projects__title">Calendar Space - Webflow 101</h1>
+
+                                    <a href="https://calendar-webflow-101.webflow.io" target="_blank" class="projects__button">
+                                        View demo <i class="ri-arrow-right-line"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <!--==================== PROJECT 5 ====================-->
+                            <div class="projects__content swiper-slide">
+                                <img src="./assets/img/Projects Preview Image/preview-5.png" alt="Project image 5" class="projects__img">
 
                                 <div>
                                     <span class="projects__subtitle">Web Design</span>
@@ -583,9 +608,9 @@
                                     </a>
                                 </div>
                             </div>
-                            <!--==================== PROJECT 2 ====================-->
+                            <!--==================== PROJECT 1 ====================-->
                             <div class="projects__content swiper-slide">
-                                <img src="./assets/img/preview-1.png" alt="Project image 1" class="projects__img">
+                                <img src="./assets/img/Projects Preview Image/preview-1.png" alt="Project image 1" class="projects__img">
 
                                 <div>
                                     <span class="projects__subtitle">Web</span>
@@ -597,9 +622,9 @@
                                 </div>
                             </div>
 
-                            <!--==================== PROJECT 3 ====================-->
+                            <!--==================== PROJECT 2 ====================-->
                             <div class="projects__content swiper-slide">
-                                <img src="./assets/img/preview-2.png" alt="Project image 2" class="projects__img">
+                                <img src="./assets/img/Projects Preview Image/preview-2.png" alt="Project image 2" class="projects__img">
 
                                 <div>
                                     <span class="projects__subtitle">Web</span>
@@ -611,9 +636,9 @@
                                 </div>
                             </div>
 
-                            <!--==================== PROJECT 4 ====================-->
+                            <!--==================== PROJECT 3 ====================-->
                             <div class="projects__content swiper-slide">
-                                <img src="./assets/img/preview-3.png" alt="Project image 3" class="projects__img">
+                                <img src="./assets/img/Projects Preview Image/preview-3.png" alt="Project image 3" class="projects__img">
 
                                 <div>
                                     <span class="projects__subtitle">Web</span>
@@ -624,9 +649,9 @@
                                     </a>
                                 </div>
                             </div>
-                            <!--==================== PROJECT 5 ====================-->
+                            <!--==================== PROJECT 4 ====================-->
                             <div class="projects__content swiper-slide">
-                                <img src="./assets/img/prewiev-4.png" alt="Project image 4" class="projects__img">
+                                <img src="./assets/img/Projects Preview Image/preview-4.png" alt="Project image 4" class="projects__img">
 
                                 <div>
                                     <span class="projects__subtitle">Design</span>
