Changes Skills Section

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             </div>
 
                             <h3 class="skills__name">HTML</h3>
-                            <span class="skills__subtitle">Intermediate</span>
+                            <span class="skills__subtitle">Advance</span>
                         </div>
 
                         <div class="skills__data">
@@ -220,6 +220,15 @@
                             </div>
 
                             <h3 class="skills__name">CSS</h3>
+                            <span class="skills__subtitle">Advance</span>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="./assets/img/bootstrap-5-1.svg" alt="skills image">
+                            </div>
+
+                            <h3 class="skills__name">Bootstrap</h3>
                             <span class="skills__subtitle">Advance</span>
                         </div>
 
