New Project Added

--- a/index.html
+++ b/index.html
@@ -591,6 +591,19 @@
                 <div class="container section__border">
                     <div class="projects__container swiper">
                         <div class="swiper-wrapper">
+                             <!--==================== PROJECT 7 ====================-->
+                             <div class="projects__content swiper-slide">
+                                <img src="./assets/img/Projects Preview Image/preview-7.png" alt="Project image 7" class="projects__img">
+
+                                <div>
+                                    <span class="projects__subtitle">Concept brand for instagram</span>
+                                    <h1 class="projects__title">JG Jewelry</h1>
+
+                                    <a href="https://www.instagram.com/j_g__joyeria/" target="_blank" class="projects__button">
+                                        View instagram <i class="ri-arrow-right-line"></i>
+                                    </a>
+                                </div>
+                            </div>
                             <!--==================== PROJECT 6 ====================-->
                             <div class="projects__content swiper-slide">
                                 <img src="./assets/img/Projects Preview Image/preview-6.png" alt="Project image 6" class="projects__img">
