--- a/index.html
+++ b/index.html
@@ -509,11 +509,20 @@
                         <div class="qualification__info">
                             <div>
                                 <h3 class="qualification__name">
+                                    Intership in Technical Tutoring
+                                </h3>
+
+                                <span class="qualification__country">Ministry of Economy - Santa Fe, Argentina</span>
+                                <span class="qualification__year">April 2023 - Present</span>
+                            </div>
+                        <div class="qualification__info">
+                            <div>
+                                <h3 class="qualification__name">
                                     Data Collection for Security Systems and Artificial Intelligence
                                 </h3>
 
                                 <span class="qualification__country">Remotasks - USA</span>
-                                <span class="qualification__year">2021 - Present</span>
+                                <span class="qualification__year">2021 - 2023</span>
                             </div>
 
                             <div>
