--- a/index.html
+++ b/index.html
@@ -600,6 +600,19 @@
                 <div class="container section__border">
                     <div class="projects__container swiper">
                         <div class="swiper-wrapper">
+                            <!--==================== PROJECT 8 ====================-->
+                            <div class="projects__content swiper-slide">
+                                <img src="./assets/img/Projects Preview Image/preview-8.png" alt="Project image 8" class="projects__img">
+
+                                <div>
+                                    <span class="projects__subtitle">Web</span>
+                                    <h1 class="projects__title">Vans Product Card</h1>
+
+                                    <a href="https://vans-product-card.micaelakloster.repl.co/" target="_blank" class="projects__button">
+                                        View Website <i class="ri-arrow-right-line"></i>
+                                    </a>
+                                </div>
+                            </div>
                              <!--==================== PROJECT 7 ====================-->
                              <div class="projects__content swiper-slide">
                                 <img src="./assets/img/Projects Preview Image/preview-7.png" alt="Project image 7" class="projects__img">
