--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                                     <span class="projects__subtitle">Web</span>
                                     <h1 class="projects__title">Vans Product Card</h1>
 
-                                    <a href="https://vans-product-card.micaelakloster.repl.co/" target="_blank" class="projects__button">
+                                    <a href="https://vans-product-card.netlify.app/" target="_blank" class="projects__button">
                                         View Website <i class="ri-arrow-right-line"></i>
                                     </a>
                                 </div>
@@ -660,7 +660,7 @@
                                     <span class="projects__subtitle">Web</span>
                                     <h1 class="projects__title">Modern Gym Website</h1>
 
-                                    <a href="https://Berotot-Gym.micaelakloster.repl.co" target="_blank" class="projects__button">
+                                    <a href="https://modern-gym.netlify.app/" target="_blank" class="projects__button">
                                         View demo <i class="ri-arrow-right-line"></i>
                                     </a>
                                 </div>
@@ -672,9 +672,9 @@
 
                                 <div>
                                     <span class="projects__subtitle">Web</span>
-                                    <h1 class="projects__title">Watches ECommerce Store</h1>
+                                    <h1 class="projects__title">Watches E-Commerce Store</h1>
 
-                                    <a href="https://Watches.micaelakloster.repl.co" target="_blank" class="projects__button">
+                                    <a href="https://watches-ecommerce-store.netlify.app/" target="_blank" class="projects__button">
                                         View demo <i class="ri-arrow-right-line"></i>
                                     </a>
                                 </div>
@@ -688,7 +688,7 @@
                                     <span class="projects__subtitle">Web</span>
                                     <h1 class="projects__title">NFT Website</h1>
 
-                                    <a href="https://NFT-Website.micaelakloster.repl.co" target="_blank" class="projects__button">
+                                    <a href="https://nfts-website.netlify.app/" target="_blank" class="projects__button">
                                         View demo <i class="ri-arrow-right-line"></i>
                                     </a>
                                 </div>
