--- a/index.html
+++ b/index.html
@@ -303,53 +303,36 @@
                 <!--==================== SKILLS 3 ====================-->
                 <div class="skills__content">
                     <h3 class="skills__title">
-                        <i class="ri-code-s-slash-line"></i> Other Programming Languages
+                        <i class="ri-code-s-slash-line"></i> Other Programming Languages & Services
                     </h3>
 
                     <div class="skills__info">
                        
+
                         <div class="skills__data">
                             <div class="skills__blob">
-                                <img src="./assets/img/python.svg" alt="skills image">
+                                <img src="./assets/img/nodejs-ar21.svg" alt="skills image">
                             </div>
 
-                            <h3 class="skills__name">Python</h3>
+                            <h3 class="skills__name">Node.js</h3>
                             <span class="skills__subtitle">Intermediate</span>
                         </div>
 
                         <div class="skills__data">
                             <div class="skills__blob">
-                                <img src="./assets/img/ruby.svg" alt="skills image">
+                                <img src="./assets/img/expressjs-ar21.svg" alt="skills image">
                             </div>
 
-                            <h3 class="skills__name">Ruby</h3>
-                            <span class="skills__subtitle">Basic</span>
-                        </div>
-
-                        <div class="skills__data">
-                            <div class="skills__blob">
-                                <img src="./assets/img/java.svg" alt="skills image">
-                            </div>
-
-                            <h3 class="skills__name">Java</h3>
-                            <span class="skills__subtitle">Basic</span>
-                        </div>
-
-                        <div class="skills__data">
-                            <div class="skills__blob">
-                                <img src="./assets/img/php.svg" alt="skills image">
-                            </div>
-
-                            <h3 class="skills__name">PHP</h3>
-                            <span class="skills__subtitle">Basic</span>
+                            <h3 class="skills__name">Express</h3>
+                            <span class="skills__subtitle">Intermediate</span>
                         </div>
                        
                         <div class="skills__data">
                             <div class="skills__blob">
-                                <img src="./assets/img/dot_net.svg" alt="skills image">
+                                <img src="./assets/img/handlebarsjs-icon.svg" alt="skills image">
                             </div>
 
-                            <h3 class="skills__name">.NET</h3>
+                            <h3 class="skills__name">Handlebars</h3>
                             <span class="skills__subtitle">Intermediate</span>
                         </div>
 
@@ -360,6 +343,34 @@
 
                             <h3 class="skills__name">MySQL</h3>
                             <span class="skills__subtitle">Basic</span>
+                        </div>
+
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="./assets/img/npmjs-ar21.svg" alt="skills image">
+                            </div>
+
+                            <h3 class="skills__name">npm</h3>
+                            <span class="skills__subtitle">Intermediate</span>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="./assets/img/redis-icon.svg" alt="skills image">
+                            </div>
+
+                            <h3 class="skills__name">Redis</h3>
+                            <span class="skills__subtitle">Intermediate</span>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__blob">
+                                <img src="./assets/img/getpostman-icon.svg" alt="skills image">
+                            </div>
+
+                            <h3 class="skills__name">Postman</h3>
+                            <span class="skills__subtitle">Intermediate</span>
                         </div>
 
                         <div class="skills__data">
@@ -373,19 +384,19 @@
 
                         <div class="skills__data">
                             <div class="skills__blob">
-                                <img src="./assets/img/angular.svg" alt="skills image">
+                                <img src="./assets/img/python.svg" alt="skills image">
                             </div>
 
-                            <h3 class="skills__name">Angular</h3>
-                            <span class="skills__subtitle">Basic</span>
+                            <h3 class="skills__name">Python</h3>
+                            <span class="skills__subtitle">Intermediate</span>
                         </div>
 
                         <div class="skills__data">
                             <div class="skills__blob">
-                                <img src="./assets/img/kotlin.svg" alt="skills image">
+                                <img src="./assets/img/java.svg" alt="skills image">
                             </div>
 
-                            <h3 class="skills__name">Kotlin</h3>
+                            <h3 class="skills__name">Java</h3>
                             <span class="skills__subtitle">Basic</span>
                         </div>
 
