--- a/index.html
+++ b/index.html
@@ -611,6 +611,19 @@
                 <div class="container section__border">
                     <div class="projects__container swiper">
                         <div class="swiper-wrapper">
+                            <!--==================== PROJECT 9 ====================-->
+                            <div class="projects__content swiper-slide">
+                                <img src="./assets/img/Projects Preview Image/preview-12.png" alt="Project image 8" class="projects__img">
+
+                                <div>
+                                    <span class="projects__subtitle">Backend</span>
+                                    <h1 class="projects__title">Car dealership</h1>
+
+                                    <a href="https://github.com/MicaelaKloster/TFI-PROG3" target="_blank" class="projects__button">
+                                        View Website <i class="ri-arrow-right-line"></i>
+                                    </a>
+                                </div>
+                            </div>
                             <!--==================== PROJECT 8 ====================-->
                             <div class="projects__content swiper-slide">
                                 <img src="./assets/img/Projects Preview Image/preview-8.png" alt="Project image 8" class="projects__img">
