--- a/index.html
+++ b/index.html
@@ -611,9 +611,22 @@
                 <div class="container section__border">
                     <div class="projects__container swiper">
                         <div class="swiper-wrapper">
-                             <!--==================== PROJECT 10 ====================-->
-                             <div class="projects__content swiper-slide">
-                                <img src="./assets/img/Projects Preview Image/preview-13.png" alt="Project image 8" class="projects__img">
+                            <!--==================== PROJECT 11 ====================-->
+                            <div class="projects__content swiper-slide">
+                                <img src="./assets/img/Projects Preview Image/preview-14.png" alt="Project image 10" class="projects__img">
+
+                                <div>
+                                    <span class="projects__subtitle">Python</span>
+                                    <h1 class="projects__title">Historia Clinica - Instituto Medico Las Luciernagas</h1>
+
+                                    <a href="https://lista-tareas-pendientes-react-ts.netlify.app/" target="_blank" class="projects__button">
+                                        View Website <i class="ri-arrow-right-line"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <!--==================== PROJECT 10 ====================-->
+                            <div class="projects__content swiper-slide">
+                                <img src="./assets/img/Projects Preview Image/preview-13.png" alt="Project image 9" class="projects__img">
 
                                 <div>
                                     <span class="projects__subtitle">React + TS</span>
