new project added

--- a/index.html
+++ b/index.html
@@ -439,15 +439,6 @@
 
                             <div>
                                 <h3 class="qualification__name">
-                                    Computer Engineer
-                                </h3>
-
-                                <span class="qualification__country">UNL University  - Argentina</span>
-                                <span class="qualification__year">2020 - Present</span>
-                            </div>
-
-                            <div>
-                                <h3 class="qualification__name">
                                     Diploma in Website and Mobile Application Development
                                 </h3>
 
@@ -611,6 +602,19 @@
                 <div class="container section__border">
                     <div class="projects__container swiper">
                         <div class="swiper-wrapper">
+                            <!--==================== PROJECT 12 ====================-->
+                            <div class="projects__content swiper-slide">
+                                <img src="./assets/img/Projects Preview Image/preview-15.png" alt="Project image 10" class="projects__img">
+
+                                <div>
+                                    <span class="projects__subtitle">NestJS + Angular + Postgresql</span>
+                                    <h1 class="projects__title">Sistemas de Encuestas Anónimas</h1>
+
+                                    <a href="https://github.com/MicaelaKloster/Sistema-de-Encuestas" target="_blank" class="projects__button">
+                                        View Project <i class="ri-arrow-right-line"></i>
+                                    </a>
+                                </div>
+                            </div>
                             <!--==================== PROJECT 11 ====================-->
                             <div class="projects__content swiper-slide">
                                 <img src="./assets/img/Projects Preview Image/preview-14.png" alt="Project image 10" class="projects__img">
@@ -619,8 +623,8 @@
                                     <span class="projects__subtitle">Python</span>
                                     <h1 class="projects__title">Historia Clinica - Instituto Medico Las Luciernagas</h1>
 
-                                    <a href="https://lista-tareas-pendientes-react-ts.netlify.app/" target="_blank" class="projects__button">
-                                        View Website <i class="ri-arrow-right-line"></i>
+                                    <a href="https://github.com/MicaelaKloster/Historia-Clinica---Instituto-Medico-Las-Luciernagas" target="_blank" class="projects__button">
+                                        View Project <i class="ri-arrow-right-line"></i>
                                     </a>
                                 </div>
                             </div>
