--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
 
                                 <div>
                                     <span class="projects__subtitle">NestJS + Angular + Postgresql</span>
-                                    <h1 class="projects__title">Sistemas de Encuestas Anónimas</h1>
+                                    <h1 class="projects__title">Sistema de Encuestas Anónimas</h1>
 
                                     <a href="https://github.com/MicaelaKloster/Sistema-de-Encuestas" target="_blank" class="projects__button">
                                         View Project <i class="ri-arrow-right-line"></i>
@@ -621,7 +621,7 @@
 
                                 <div>
                                     <span class="projects__subtitle">Python</span>
-                                    <h1 class="projects__title">Historia Clinica - Instituto Medico Las Luciernagas</h1>
+                                    <h1 class="projects__title">Historia Clinica</h1>
 
                                     <a href="https://github.com/MicaelaKloster/Historia-Clinica---Instituto-Medico-Las-Luciernagas" target="_blank" class="projects__button">
                                         View Project <i class="ri-arrow-right-line"></i>
