--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
         <footer class="footer">
             <div class="footer__container container">
                 <h1 class="footer__title">Mica</h1>
-                <p>Frontend Developer</p>
+                <p>Full-Stack Developer</p>
 
                 <ul class="footer__list">
                     <li>
