--- a/index.html
+++ b/index.html
@@ -673,12 +673,24 @@
                 <div class="container section__border">
                     <div class="projects__container swiper">
                         <div class="swiper-wrapper">
-                            <!--==================== PROJECT 12 ====================-->
+                            <!--==================== PROJECT 13 ====================-->
+                            <div class="projects__content swiper-slide">
+                                <img src="./assets/img/Projects Preview Image/preview-16.png" alt="Plataforma de capacitación de marroquinería" class="projects__img">
+
+                                <div>
+                                    <span class="projects__subtitle">Node.js + Express.js + React 18 + Vite + Tailwindcss + PostgreSQL</span>
+                                    <h1 class="projects__title">Club Macabras</h1>
+
+                                    <a href="https://clubmacabras.netlify.app/" target="_blank" class="projects__button">
+                                        View Project <i class="ri-arrow-right-line"></i>
+                                    </a>
+                                </div>
+                            </div><!--==================== PROJECT 12 ====================-->
                             <div class="projects__content swiper-slide">
                                 <img src="./assets/img/Projects Preview Image/preview-15.png" alt="Project image 10" class="projects__img">
 
                                 <div>
-                                    <span class="projects__subtitle">NestJS + Angular + Postgresql</span>
+                                    <span class="projects__subtitle">NestJS + Angular + PostgreSQL</span>
                                     <h1 class="projects__title">Sistema de Encuestas Anónimas</h1>
 
                                     <a href="https://github.com/MicaelaKloster/Sistema-de-Encuestas" target="_blank" class="projects__button">
