correcciones en stats y contacto

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                     <div class="about__stats">
                         <div class="about__stat">
-                            <h3 class="about__stat-number" data-target="3">0</h3>
+                            <h3 class="about__stat-number" data-target="5">0</h3>
                             <p class="about__stat-label">Years Experience</p>
                         </div>
                         <div class="about__stat">
@@ -570,13 +570,13 @@
                                 <i class="ri-mail-line"></i>
                                 <div>
                                     <span class="contact__info-label">Email</span>
-                                    <a href="/cdn-cgi/l/email-protection#d0bdb9b3b1b5bcb1febbbcbfa3a4b5a2a1a5b9bea4b1beb190b7bdb1b9bcfeb3bfbd" class="contact__info-value">
-                                        <span class="__cf_email__" data-cfemail="2f42464c4e4a434e014443405c5b4a5d5e5a46415b4e414e6f48424e4643014c4042">[email&#160;protected]</span>
+                                    <a href="mailto:micaela.klosterquintana@gmail.com" class="contact__info-value">
+                                        micaela.klosterquintana@gmail.com
                                     </a>
                                 </div>
                             </div>
 
-                            <div class="contact__info-item">
+                            <!-- <div class="contact__info-item">
                                 <i class="ri-whatsapp-line"></i>
                                 <div>
                                     <span class="contact__info-label">WhatsApp</span>
@@ -584,7 +584,7 @@
                                         +54 9 342 525 4198
                                     </a>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
@@ -676,7 +676,7 @@
 
             <div class="footer__bottom">
                 <p class="footer__copy">
-                    &copy; 2025 Micaela Kloster Quintana. All rights reserved.
+                    &copy; 2026 Micaela Kloster Quintana. All rights reserved.
                 </p>
             </div>
         </div>
